--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
 		"@sveltejs/adapter-cloudflare": "^5.0.3",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/p5": "^1.7.6",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0",
 		"wrangler": "^3.109.1"
+	},
+	"dependencies": {
+		"p5": "^1.11.3"
 	}
 }
